# MAI_OS

./: .gitignore  README.md
.devcontainer/: devcontainer.json
lab1/: CMakeLists.txt  README.md  child.cpp  parent.cpp
lab2/: CMakeLists.txt  README.md  benchmark.cpp  inputdata.txt  main.cpp
lab2/amdahl/: plot_benchmark.py  plot_theory_amdahl.py
lab2/amdahl/data/: benchmark_results1000.txt  benchmark_results2500.txt  benchmark_results500.txt  benchmark_results_10000.txt  benchmark_results_500.txt
lab2/benchmarks/: benchmark.cpp  generate_matrix.cpp
lab2/include/: gaussian.h  thread_pool.h  worker_pool.h
lab2/src/: gaussian.cpp  thread_pool.cpp  worker_pool.cpp
lab3/: CMakeLists.txt  README.md  child.cpp  parent.cpp
lab3/include/: shared_message.h
lab3/src/: shared_message.cpp
lab4/: README.md  p1.c  p2.c
lab4/include/: my_lib.h
lab4/src/: my_lib_1.c  my_lib_2.c
lab5/: README.md
